package com.medical.entities;

/**
 * User roles in the system.
 */
public enum UserRole {
  ADMIN,
  SCHEDULER,
  PATIENT,
  PROFESSIONAL
}