@startuml DomainEntities

skinparam classAttributeIconSize 0

' === ENUMS (from com.medical.enums) ===
package "com.medical.enums" {
  enum UserRole <<enumeration>> #LightBlue;line:Black {
    ADMINISTRATOR
    PATIENT
    PHYSICIAN
    THERAPIST
    SCHEDULER
  }
  
  enum UserStatus <<enumeration>> #LightBlue;line:Black {
    ACTIVE
    INACTIVE
    PENDING
  }
  
  enum AppointmentStatus <<enumeration>> #LightBlue;line:Black {
    PENDING
    CONFIRMED
    CANCELLED
    COMPLETED
    NO_SHOW
  }
}

' === USER ENTITY (from com.medical.model) ===
package "com.medical.model" {
  class User <<entity>> #LightYellow;line:Black
  class Appointment <<entity>> #LightYellow;line:Black
}

' === RELATIONSHIPS WITH CARDINALITIES ===
User "1" --> "1" UserRole : "has"
User "1" --> "1" UserStatus : "has"

Appointment "1" --> "1" AppointmentStatus : "has"
Appointment "0..1" --> "0..1" User : "references patient"
Appointment "0..1" --> "0..1" User : "references professional"

note "Domain Layer: Entities" as N1

@enduml